UHF-4465: Styles for events paragraph

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -6,6 +6,7 @@
 @import 'contact-card-listing';
 @import 'content-cards';
 @import 'content-liftup';
+@import 'event-list';
 @import 'gallery';
 @import 'hero';
 @import 'image';
