UHF-4465: Fix placeholder

--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -59,6 +59,10 @@
     object-fit: cover;
   }
 
+  .event__image.image-placeholder {
+    padding: 0;
+  }
+
   .event__content-container {
     @include breakpoint($breakpoint-l) {
       padding-left: $spacing-double;
