UHF-2976: Prepare cleaning up regions

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -11,8 +11,7 @@
  * @see hdbt_content_preprocess_page() and hdbt_preprocess_page()
 #}
 
-{# TODO: Do we need to separate the sidebar first and sidebar second regions? #}
-{% if has_sidebar %}
+{# {% if has_sidebar %}
   {% set sidebar_first_output = TRUE %}
 {% endif %}
 
@@ -30,6 +29,15 @@
     has_sidebar ? 'has-sidebar' : 'no-sidebar',
     sidebar_first_output ? 'has-sidebar--first',
     sidebar_second_output ? 'has-sidebar--second',
+  ]
+%} #}
+
+{% set page_classes = [
+    node.getType() ? 'page-type--' ~ node.getType()|clean_class,
+    'wrapper',
+    has_sidebar_first or has_sidebar_second ? 'has-sidebar' : 'no-sidebar',
+    has_sidebar_first ? 'has-sidebar--first',
+    has_sidebar_second ? 'has-sidebar--second',
   ]
 %}
 
@@ -80,34 +88,37 @@
 
     <a id="main-content" tabindex="-1"></a>
 
-    {# Construct page_title_block based on active theme. #}
-    {% set page_title_block = active_theme ~ '_page_title' %}
-
     {% block page_before_content %}
-      {# Render before content without the page title block. #}
       {% if page.before_content %}
-        {{ page.before_content|without(page_title_block) }}
+        {{ page.before_content }}
       {% endif %}
     {% endblock page_before_content %}
 
     <div class="main-content">
-      <div class="layout-content {% if in_menu %}has-navigation{% endif %}">
-        {% if not has_hero %}
-          {{ page.before_content[page_title_block] }}
-        {% endif %}
-        {% block page_content %}
-          {{ page.content }}
-        {% endblock page_content %}
-      </div>{# /.layout-content #}
 
-      {% if sidebar_first_output %}
-        <aside class="layout-sidebar-first {% if in_menu %}has-navigation{% endif %}" role="complementary">
+      {% if in_menu and has_sidebar_first %}
+        <div class="layout-sidebar-first">
           {{ page.sidebar_first }}
-        </aside>
+        </div>
       {% endif %}
 
-      {% if sidebar_second_output %}
-        <aside class="layout-sidebar-second" role="complementary">
+      <div class="layout-content">
+
+        {# Construct page_title_block based on active theme. #}
+        {% set page_title_block = active_theme ~ '_page_title' %}
+
+        {# We want page_title always to be before other page.content #}
+        {% if not has_hero %}
+          {{ page.content[page_title_block] }}
+        {% endif %}
+        {% block page_content %}
+          {{ page.content|without(page_title_block) }}
+        {% endblock page_content %}
+
+      </div>
+
+      {% if has_sidebar_second %}
+        <aside class="layout-sidebar-second">
           {{ page.sidebar_second }}
         </aside>
       {% endif %}
@@ -123,8 +134,10 @@
 
 {% if page.footer_top or page.footer_bottom %}
   {% set footer_variant = '' %}
-  {% if page.footer_color %}
-    {% set footer_variant = 'footer--' ~ page.footer_color|clean_class %}
+  {% if page.footer_color == 'dark'  %}
+    {% set footer_variant = 'footer--dark' %}
+  {% elseif page.footer_color == 'light' %}
+    {% set footer_variant = 'footer--light' %}
   {% endif %}
 
   <footer role="contentinfo" class="footer {{ footer_variant }}">
