UHF-4665: Added preprocessing for iframe titles for chart, embedded video and map

--- a/templates/media/media--remote-video.html.twig
+++ b/templates/media/media--remote-video.html.twig
@@ -79,7 +79,7 @@
           'src': media_attributes.src,
           'height': media_attributes.height,
           'width': media_attributes.width,
-          'title': media_attributes.title
+          'title': iframe_title,
         }
       }
     }
