--- a/modules/hdbt_content/templates/sidebar-content-block.html.twig
+++ b/modules/hdbt_content/templates/sidebar-content-block.html.twig
@@ -1,5 +1,20 @@
-{% if paragraphs %}
+{#
+/**
+ * @file
+ * Template for the sidebar content block.
+ *
+ * Variables:
+ * - paragraphs: An array of paragraph entities
+ * - computed: Automatically computed data from parent entity
+ *
+ * @see \Drupal\hdbt_content\Plugin\Block\SidebarContentBlock
+ */
+#}
+
+{% if paragraphs or computed %}
   <div class="sidebar-content">
+    {{ computed }}
+
     {% for paragraph in paragraphs %}
       {% if is_revision %}
         {{ drupal_entity_revision('paragraph', paragraph.target_revision_id) }}
