UHF-5459: render reactivity field to content page

--- a/templates/module/helfi-news-item/node--news-item.html.twig
+++ b/templates/module/helfi-news-item/node--news-item.html.twig
@@ -70,6 +70,13 @@
       </section>
     {% endif %}
 
+    {# Radioactivity #}
+    {% if content.field_radioactivity|render %}
+      <section class="content-radioactive">
+        {{ content.field_radioactivity }}
+      </section>
+    {% endif %}
+
   {% endblock main_content %}
 
 {% endembed %}
