UHF-5106: Implemented raw version of hds-pagination and modified the pager template to work with hds-styles

--- a/src/scss/06_components/navigation/__index.scss
+++ b/src/scss/06_components/navigation/__index.scss
@@ -6,8 +6,9 @@
 @import 'language-switcher';
 @import 'local-tasks';
 @import 'mobile-navigation';
-@import 'pager';
+@import 'infinite-scroll-pager';
 @import 'sidebar-menu';
 @import 'skip-to-main';
 @import 'table-of-contents';
 @import 'tabs';
+@import 'full-pagination';
