--- a/src/scss/06_components/navigation/_full-pagination.scss
+++ b/src/scss/06_components/navigation/_full-pagination.scss
@@ -3,23 +3,24 @@
 }
 
 .hds-pagination {
-  @include font('body');
   --active-page-background-color: var(--color-black);
   --link-height: 40px;
-  display: inline-block; /* Allows centering */
-  font-weight: bold;
-  position: relative; /* Enables position absolute for btn--next */
-  transform: scaleY(-1); /* Trick for flipping the list float direction from bottom to up */
 
-  /* Invisible, floated pseudo-element for reserving space for the hds-pagination__button-next,
-  we can not use this position for the actual button as it's in incorrect source order for tabbing */
+  @include font('body');
+  display: inline-block; // Allows centering.
+  font-weight: bold;
+  position: relative; // Enables position absolute for btn--next.
+  transform: scaleY(-1); // Trick for flipping the list float direction from bottom to up.
+
+  // Invisible, floated pseudo-element for reserving space for the hds-pagination__button-next,
+  // we can not use this position for the actual button as it's in incorrect source order for tabbing.
   &::before {
-    speak: never; /* Removes this pseudo-element from screen readers where supported */
-    content: attr(data-next); /* Trick to keep floating element same size as btn--next */
-    content: attr(data-next) / ''; /* Removes this pseudo-element from screen readers where supported */
+    speak: never; // Removes this pseudo-element from screen readers where supported.
+    content: attr(data-next); // Trick to keep floating element same size as btn--next.
+    content: attr(data-next) / ''; // Removes this pseudo-element from screen readers where supported.
     display: block;
-    float: right; /* Floated pseudo-element wraps the inline ul around it */
-    line-height: 56px;
+    float: right; // Floated pseudo-element wraps the inline ul around it.
+    line-height: 60px;
     padding-left: 80px;
     visibility: hidden;
   }
@@ -28,28 +29,35 @@
 .hds-pagination__button-prev {
   float: left;
   margin-right: 8px;
-  transform: scaleY(-1); /* Flip the element back from upside down */
+  transform: scaleY(-1); // Flip the element back from upside down.
   white-space: nowrap;
 }
 
 .hds-pagination__button-next {
   position: absolute;
   right: 0;
-  top: 0; /* Remember that the position is flipped upside down, so this means actually bottom */
-  transform: scaleY(-1); /* Flip the element back from upside down */
+  top: 0; // Remember that the position is flipped upside down, so this means actually bottom.
+  transform: scaleY(-1); // Flip the element back from upside down.
   white-space: nowrap;
 }
 
+.hds-pagination__button-prev-label {
+  padding: $spacing $spacing $spacing 4px;
+}
+.hds-pagination__button-next-label {
+  padding: $spacing 4px $spacing $spacing;
+}
+
 .hds-pagination__pages {
-  display: inline-flex; /* inline-flex allows floating it based on floated buttons when there is no more space */
-  flex-wrap: wrap; /* Allow wrapping of the li-elements */
+  display: inline-flex; // inline-flex allows floating it based on floated buttons when there is no more space.
+  flex-wrap: wrap; // Allow wrapping of the li-elements.
   gap: var(--spacing-2-xs);
-  justify-content: center; /* Center the li-elements */
+  justify-content: center; // Center the li-elements.
   list-style: none;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 10px;
   padding: 0;
-  transform: scaleY(-1); /* Flip the element back from upside down */
+  transform: scaleY(-1); // Flip the element back from upside down.
 }
 
 .hds-pagination__item-link {
@@ -59,7 +67,7 @@
   display: flex;
   height: var(--link-height);
   justify-content: center;
-  min-width: 32px;
+  min-width: 40px; // This is different from hds-core since we are using border-box sizing and not content-box.
   padding-left: var(--spacing-3-xs);
   padding-right: var(--spacing-3-xs);
   text-decoration: none;
@@ -90,5 +98,5 @@
   display: flex;
   height: var(--link-height);
   justify-content: center;
-  width: 24px;
+  width: 24px; // Width of the ellipsis element.
 }
