--- a/src/scss/06_components/navigation/_full-pagination.scss
+++ b/src/scss/06_components/navigation/_full-pagination.scss
@@ -1,5 +1,10 @@
 .hds-pagination-container {
+  margin-top: $spacing-double;
   text-align: center;
+
+  @include breakpoint($breakpoint-m) {
+    margin-top: $spacing-quadruple;
+  }
 }
 
 .hds-pagination {
